--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -1,13 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/fragment_one"
         android:textColor="#000000"
-        android:textSize="25sp"
-        android:id="@+id/fragment_one" />
+        android:textSize="25sp" />
 
+    <WebView
+        android:id="@+id/wv_one"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
